// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowWrapper renders correctly 1`] = `
<table>
  <tbody>
    <RowWrapper
      className=""
      onResize={[MockFunction]}
      onScroll={[MockFunction]}
      row={
        Object {
          "isEditable": undefined,
          "isExpanded": undefined,
          "isHeightAuto": undefined,
          "isOpen": undefined,
        }
      }
      rowProps={null}
      trRef={
        [MockFunction] {
          "calls": Array [
            Array [
              <tr
                class=""
                data-ouia-component-id="OUIA-Generated-TableRow-1"
                data-ouia-component-type="PF4/TableRow"
                data-ouia-safe="true"
              />,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
    >
      <BaseTableBodyRow
        className=""
        data-ouia-component-id="OUIA-Generated-TableRow-1"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe={true}
        hidden={false}
      >
        <BaseTableBodyRowBase
          className=""
          data-ouia-component-id="OUIA-Generated-TableRow-1"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe={true}
          hidden={false}
          innerRef={
            [MockFunction] {
              "calls": Array [
                Array [
                  <tr
                    class=""
                    data-ouia-component-id="OUIA-Generated-TableRow-1"
                    data-ouia-component-type="PF4/TableRow"
                    data-ouia-safe="true"
                  />,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
        >
          <tr
            className=""
            data-ouia-component-id="OUIA-Generated-TableRow-1"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe={true}
            hidden={false}
          />
        </BaseTableBodyRowBase>
      </BaseTableBodyRow>
    </RowWrapper>
  </tbody>
</table>
`;

exports[`RowWrapper renders expanded correctly 1`] = `
<table>
  <tbody>
    <RowWrapper
      className=""
      row={
        Object {
          "isExpanded": true,
        }
      }
      rowProps={null}
    >
      <BaseTableBodyRow
        className="pf-c-table__expandable-row pf-m-expanded"
        data-ouia-component-id="OUIA-Generated-TableRow-3"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe={true}
        hidden={false}
      >
        <BaseTableBodyRowBase
          className="pf-c-table__expandable-row pf-m-expanded"
          data-ouia-component-id="OUIA-Generated-TableRow-3"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe={true}
          hidden={false}
          innerRef={null}
        >
          <tr
            className="pf-c-table__expandable-row pf-m-expanded"
            data-ouia-component-id="OUIA-Generated-TableRow-3"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe={true}
            hidden={false}
          />
        </BaseTableBodyRowBase>
      </BaseTableBodyRow>
    </RowWrapper>
  </tbody>
</table>
`;
